fix publisher for java 8